--- a/style.css
+++ b/style.css
@@ -7,17 +7,9 @@ body{
 }
 .padding{
     padding: 2rem;
+    margin-top: rem;
 }
-.overlay{
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.205);
 
-}.nav-link{
-    text-shadow: 1px 0px 1px black ;
-}
 .fa-facebook{
     color: #3b5998;
     }
